[package]
name = "sapi"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.160", features = ["derive"] }
serde_yaml = "0.9.21"
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
ureq = "2.6.2"
